# testpackages

./: README.md
.github/workflows/: python.yml  release.yml  typescript.yml
scripts/: release.py
src/scottschreckengaust-test-01/: README.md  pyproject.toml
src/scottschreckengaust-test-01/scottschreckengaust_test_01/: main.py
src/scottschreckengaust-test-02/: index.ts  package-lock.json  package.json
