[project]
name = "scottschreckengaust-test-01"
version = "0.1.270157"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["scottschreckengaust_test_01"]

[tool.uv]
dev-dependencies = [
    "pyright",
]